new tags were added to form.html

--- a/form.html
+++ b/form.html
@@ -126,8 +126,8 @@
           </li>
         </ul>
       </fieldset>
-      <fieldset class="form__fieldset form__fieldset--full">
-        <legend class="form__legend">Контактная информация:</legend>
+      <fieldset class="form__fieldset form__fieldset--full form__fieldset--contacts">
+        <legend class="form__legend form__legend--contracts">Контактная информация:</legend>
         <ul class="form__list form-list form-list--contacts">
           <li class="form-list__item form-list__item--contacts form-item">
             <label class="form-item__label form-label form-label--contacts">
@@ -187,10 +187,10 @@
           </li>
         </ul>
       </fieldset>
-      <fieldset class="form__fieldset form__fieldset--full">
-        <legend class="form__legend">Посещённые достопримечательности:</legend>
+      <fieldset class="form__fieldset form__fieldset--full form__fieldset--big-top">
+        <legend class="form__legend form__legend--attractions">Посещённые достопримечательности:</legend>
         <ul class="form__list form-list form-list--impression">
-          <li class="form-list__item form-list__item--impression form-item">
+          <li class="form-list__item form-list__item--attractions form-item">
             <label class="form-item__label form-label form-label--checkable">
               <input class="form-item__input visually-hidden" type="checkbox" name="isDevilBridgeWasVisited" />
               <span class="form-item__checkbox form-checkbox">
@@ -202,7 +202,7 @@
               <span class="form-label__text form-label__text--bold">Мост Дьявола</span>
             </label>
           </li>
-          <li class="form-list__item form-list__item--impression form-item">
+          <li class="form-list__item form-list__item--attractions form-item">
             <label class="form-item__label form-label form-label--checkable">
               <input class="form-item__input visually-hidden" type="checkbox" name="isBellMountainWasVisited" />
               <span class="form-item__checkbox form-checkbox">
@@ -214,7 +214,7 @@
               <span class="form-label__text form-label__text--bold">Гора-колокол</span>
             </label>
           </li>
-          <li class="form-list__item form-list__item--impression form-item">
+          <li class="form-list__item form-list__item--attractions form-item">
             <label class="form-item__label form-label form-label--checkable">
               <input class="form-item__input visually-hidden" type="checkbox" name="isSlideParkWasVisited" />
               <span class="form-item__checkbox form-checkbox">
@@ -226,7 +226,7 @@
               <span class="form-label__text form-label__text--bold">Слайд-парк</span>
             </label>
           </li>
-          <li class="form-list__item form-list__item--impression form-item">
+          <li class="form-list__item form-list__item--attractions form-item">
             <label class="form-item__label form-label form-label--checkable">
               <input class="form-item__input visually-hidden" type="checkbox" name="areRedRocksWereVisited" />
               <span class="form-item__checkbox form-checkbox">
@@ -241,7 +241,7 @@
         </ul>
       </fieldset>
       <fieldset class="form__fieldset form__fieldset--full">
-        <legend class="form__legend">Опишите свои эмоции:</legend>
+        <legend class="form__legend form__legend--emotions">Опишите свои эмоции:</legend>
         <textarea class="input__textarea" rows="8" cols="36"
           placeholder="Опишите подробнее все свои восторги"></textarea>
       </fieldset>
